--- a/ReactJS/src/translations/vi.json
+++ b/ReactJS/src/translations/vi.json
@@ -63,5 +63,22 @@
         "choose-doctor": "Chọn bác sĩ",
         "choose-date": "Chọn ngày",
         "save": "Lưu thông tin"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Lịch khám",
+            "no-schedule": "Bác sĩ không có lịch khám",
+            "choose": "Chọn ",
+            "book-free": " và đặt (miễn phí)"
+        }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title": "TẠO THÊM THÔNG TIN CHO BÁC SĨ",
+            "select-doctor": "Chọn bác sĩ",
+            "intro": "Thông tin giới thiệu: ",
+            "add": "Tạo thông tin",
+            "save": "Lưu thông tin"
+        }
     }
 }
