--- a/ReactJS/src/translations/vi.json
+++ b/ReactJS/src/translations/vi.json
@@ -75,10 +75,16 @@
     "admin": {
         "manage-doctor": {
             "title": "TẠO THÊM THÔNG TIN CHO BÁC SĨ",
-            "select-doctor": "Chọn bác sĩ",
-            "intro": "Thông tin giới thiệu: ",
+            "select-doctor": "Bác sĩ",
+            "intro": "Thông tin giới thiệu",
             "add": "Tạo thông tin",
-            "save": "Lưu thông tin"
+            "save": "Lưu thông tin",
+            "price": "Giá khám bệnh",
+            "payment": "Phương thức thanh toán",
+            "province": "Tỉnh thành",
+            "nameClinic": "Tên phòng khám",
+            "addressClinic": "Địa chỉ phòng khám",
+            "note": "Ghi chú"
         }
     }
 }
