--- a/ReactJS/src/translations/en.json
+++ b/ReactJS/src/translations/en.json
@@ -71,6 +71,13 @@
             "no-schedule": "The doctor does not have an appointment during this time, please",
             "choose": "Choose ",
             "book-free": " and book (free)"
+        },
+        "extra-infor-doctor": {
+            "text-address": "Address of examination",
+            "price": "Examination price: ",
+            "detail": "See details",
+            "payment": "The patien can pay the cost in the form of: ",
+            "hide-price": "Hide price list"
         }
     },
     "admin": {
