--- a/ReactJS/src/translations/en.json
+++ b/ReactJS/src/translations/en.json
@@ -78,6 +78,20 @@
             "detail": "See details",
             "payment": "The patien can pay the cost in the form of: ",
             "hide-price": "Hide price list"
+        },
+        "booking-modal": {
+            "title": "Information to book a medical appointment",
+            "fullName": "Fullname",
+            "phoneNumber": "Phonenumber",
+            "email": "Email",
+            "address": "Address",
+            "reason": "Reasons for medical examination",
+            "birthday": "Date of birth",
+            "gender": "Genders",
+            "btnConfirm": "Confirm",
+            "priceBooking": "Free booking",
+            "price": "Price: ",
+            "btnCancel": "Cancel"
         }
     },
     "admin": {
