--- a/ReactJS/src/translations/en.json
+++ b/ReactJS/src/translations/en.json
@@ -57,7 +57,8 @@
     },
     "homepage": {
         "outstanding-doctor": "Last week's featured doctor",
-        "more-infor": "More Infor"
+        "more-infor": "More Infor",
+        "speciality-poplular": "Poplular specialties"
     },
     "manage-schedule": {
         "title": "Manage doctor's examination plan",
